[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "minecraft_documentary_wyatt"

description = "Wyatt's Minecraft Documentary"

readme = "README.md"
requires-python = ">=3.7"
license = "MIT"


authors = [
  { name = "Wyatt Walker", email = "wyatt.lee.walker@gmail.com" },
]


dependencies = ['markata~=0.5.0.dev0']
dynamic = ["version"]

[tool.hatch.version]
path = "minecraft_documentary_wyatt/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pyinstrument",
]

[tool.hatch.envs.default.scripts]
clean = "markata clean"
build = "markata build"
tui = "markata tui"
serve = "python -m http.server 8000 --directory=markout"
clean-build = ['clean', 'build',]
clean-tui = ['clean', 'build', 'tui']
